--- a/codigo/public/assets/css/ranking.css
+++ b/codigo/public/assets/css/ranking.css
@@ -1,45 +1,5 @@
 
-body {
-    font-family: 'Quicksand', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f8f9fa;
-    color: #333;
-}
 
-
-header {
-    background-color: #4CAF50;
-    color: white;
-    padding: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-header img.logo {
-    width: 50px;
-    margin-right: 10px;
-}
-
-header h2 {
-    font-size: 24px;
-    text-align: center;
-}
-
-.usuario-container img.usuario {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-}
-
-
-main h3 {
-    font-size: 36px;
-    font-weight: 600;
-    color: #4CAF50;
-}
 
 #ranking-list {
     list-style: none;
@@ -79,33 +39,46 @@ main h3 {
     flex-wrap: wrap;
 }
 
-/* Footer Styles */
-footer {
-    background-color: #333;
-    color: white;
-    padding: 20px;
-    text-align: center;
+
+
+#ranking-list {
+    list-style: none;
+    padding: 0;
+    margin-top: 30px;
+    width: 100%;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 22px;
+    font-family: 'Quicksand', sans-serif;
+    color: #ffffff;
 }
 
-footer h3 {
-    font-size: 18px;
+#ranking-list li {
+    display: flex;
+    justify-content: space-between;
+    background-color: #a8dba8;
     margin-bottom: 10px;
+    padding: 20px 40px;
+    border-radius: 30px;
+    font-size: 20px;
+    color: #ffffff;
+    font-weight: 700;
 }
 
-footer p {
-    margin: 0;
-    font-size: 14px;
+#ranking-list li strong {
+    color: #004400;
+    margin-right: 10px;
 }
 
-footer a {
-    color: #4CAF50;
-    text-decoration: none;
-    font-weight: bold;
+#ranking-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 10px;
+    flex-wrap: wrap;
 }
 
-footer a:hover {
-    text-decoration: underline;
-}
 .badges-section {
     padding: 40px 0;
     background-color: #ffffff;
