--- a/codigo/public/assets/css/style.css
+++ b/codigo/public/assets/css/style.css
@@ -1,7 +1,6 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css");
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
-/* General Styles */
 h3 {
     color: #093070;
     border-bottom: 1px solid #c1c1c1;
@@ -15,7 +14,7 @@ main {
     padding: 20px;
 }
 
-/* Custom Button Styles */
+
 .btn-nutritech-primary {
     background-color: #5D8736;
     border-color: #5D8736;
@@ -23,7 +22,7 @@ main {
 }
 
 .btn-nutritech-primary:hover {
-    background-color: #4A6F2A; /* Darker shade for hover */
+    background-color: #4A6F2A;
     border-color: #4A6F2A;
     color: #fff;
 }
@@ -35,7 +34,7 @@ main {
 }
 
 .btn-nutritech-secondary:hover {
-    background-color: #E06030; /* Darker shade for hover */
+    background-color: #E06030;
     border-color: #E06030;
     color: #fff;
 }
