--- a/codigo/public/assets/css/perfil_usuario.css
+++ b/codigo/public/assets/css/perfil_usuario.css
@@ -1,5 +1,3 @@
-
-
 a {
     color: rgb(5, 95, 50);
     text-decoration: none;
@@ -147,4 +145,9 @@ footer .logo {
         background-position: left bottom, center 300px, right bottom;
         background-size: 15%, 50%, 40%;
     }
+}
+#lista-doacoes {
+    max-height: 700px;
+    overflow-y: auto; 
+    padding-right: 15px;
 }
